

SideBarEnhancements Changelog:

	.3

			* copy image cant' copy image sizes
			* fix canary https://github.com/titoBouzout/SideBarEnhancements/commit/0d23f3e10650ec8e3792cd7a7f0ceaec2ae84fcb
			* Apply patch for ubuntu encrypted folder bug.  https://github.com/hsoft/send2trash/issues/1#issuecomment-31734060
			* open in default browser OSX
			* Relative vs absolute in project folders
			* Allow mass rename of folders and files https://github.com/titoBouzout/SideBarEnhancements/commit/dbdaaffa4a53411b1d39337f7ceee6ecef9b73cb
			* correctly open folders in a new window on mac os x


		TODO

			* Use a real clipboard integrated with the OS
			* copy and paste in background
			* auto refresh proect folder every x time?

	.2

		BUGS FIXED

			* fix instant search (begin edit, end edit mess)..
			* rename of "dirty" view, does not carry changes.
			* rename of view, does not carry undo/redo history.
			* reveal on windows on a folder, will open the folder, not reveal the folder.
			* fix.. reveal does not work with "," in path names
			* fix.. a project folder can't be removed via context menu if the project was not saved.
			* browser preview supports relative urls, and multiple configuration files a la ".htaccess"

	.1

		BUGS FIXED

			* remove some obsolete code
			* refactor some functions
			* solve encoding mess
			* Fix for when packages_path is a link
			* fix open with..
			* copy url commmand
			* exclude from project
			* promote as project folder
			* no value on browser will use default browser
			* statusbar functions fixes
			* fix open/run command windows
			* hide default menus

		IMPROVEMENTS

			* for each window, locate the focused tab in sidebar at startup
			* Lazy load sendtotrash, desktop.
			* 2nd fix #92
			* improves open in new window commmand

		TODO

			* Use a real clipboard integrated with the OS
			* fix canary
			* fix.. reveal does not work with "," in path names
			* copy and paste in background