@@ -1,6 +1,6 @@
 # coding=utf8
 import sublime, sublime_plugin
-import os
+import os, shutil
 
 import threading, time
 
@@ -465,6 +465,31 @@ class SideBarCopyCommand(sublime_plugin.WindowCommand):
 
 class SideBarPasteCommand(sublime_plugin.WindowCommand):
 	def run(self, paths = [], in_parent = 'False', test = 'True', replace = 'False'):
+		SideBarPasteThread(paths, in_parent, test, replace).start()
+
+	def is_enabled(self, paths = [], in_parent = False):
+		s = sublime.load_settings("SideBarEnhancements/Clipboard.sublime-settings")
+		return s.get('cut', '') + s.get('copy', '') != '' and len(SideBarSelection(paths).getSelectedDirectoriesOrDirnames()) == 1
+
+	def is_visible(self, paths = [], in_parent = False):
+		if in_parent == 'True':
+			return not s.get('disabled_menuitem_paste_in_parent')
+		else:
+			return True
+
+class SideBarPasteThread(threading.Thread):
+	def __init__(self, paths = [], in_parent = 'False', test = 'True', replace = 'False'):
+		self.paths = paths
+		self.in_parent = in_parent
+		self.test = test
+		self.replace = replace
+		threading.Thread.__init__(self)
+
+	def run(self):
+		SideBarPasteCommand2(sublime_plugin.WindowCommand).run(self.paths, self.in_parent, self.test, self.replace)
+
+class SideBarPasteCommand2(sublime_plugin.WindowCommand):
+	def run(self, paths = [], in_parent = 'False', test = 'True', replace = 'False'):
 		s = sublime.load_settings("SideBarEnhancements/Clipboard.sublime-settings")
 
 		cut = s.get('cut', '')
@@ -524,7 +549,7 @@ class SideBarPasteCommand(sublime_plugin.WindowCommand):
 			if test == 'True' and len(already_exists_paths):
 				self.confirm(paths, in_parent, already_exists_paths)
 			elif test == 'True' and not len(already_exists_paths):
-				self.run(paths, in_parent, 'False', 'False')
+				SideBarPasteThread(paths, in_parent, 'False', 'False').start();
 			elif test == 'False':
 				cut = s.set('cut', '')
 				SideBarProject().refresh();
@@ -552,19 +577,9 @@ class SideBarPasteCommand(sublime_plugin.WindowCommand):
 	def on_done(self, paths, in_parent, result):
 		if result != -1:
 			if result == 0:
-				self.run(paths, in_parent, 'False', 'True')
+				SideBarPasteThread(paths, in_parent, 'False', 'True').start()
 			else:
-				self.run(paths, in_parent, 'False', 'False')
-
-	def is_enabled(self, paths = [], in_parent = False):
-		s = sublime.load_settings("SideBarEnhancements/Clipboard.sublime-settings")
-		return s.get('cut', '') + s.get('copy', '') != '' and len(SideBarSelection(paths).getSelectedDirectoriesOrDirnames()) == 1
-
-	def is_visible(self, paths = [], in_parent = False):
-		if in_parent == 'True':
-			return not s.get('disabled_menuitem_paste_in_parent')
-		else:
-			return True
+				SideBarPasteThread(paths, in_parent, 'False', 'False').start()
 
 class SideBarCopyNameCommand(sublime_plugin.WindowCommand):
 	def run(self, paths = []):
@@ -1079,7 +1094,10 @@ class SideBarDeleteCommand(sublime_plugin.WindowCommand):
 					if s.get('close_affected_buffers_when_deleting_even_if_dirty', False):
 						item.closeViews()
 					if s.get('disable_send_to_trash', False):
-						self.remove(item.path());
+						if sublime.platform() == 'windows':
+							self.remove('\\\\?\\'+item.path());
+						else:
+							self.remove(item.path());
 					else:
 						send2trash(item.path())
 				SideBarProject().refresh();
@@ -1121,7 +1139,10 @@ class SideBarDeleteCommand(sublime_plugin.WindowCommand):
 		if s.get('close_affected_buffers_when_deleting_even_if_dirty', False):
 			item = SideBarItem(new, os.path.isdir(new))
 			item.closeViews()
-		self.remove(new)
+		if sublime.platform() == 'windows':
+			self.remove('\\\\?\\'+new);
+		else:
+			self.remove(new)
 		SideBarProject().refresh();
 
 	def remove(self, path):
@@ -1149,9 +1170,18 @@ class SideBarDeleteCommand(sublime_plugin.WindowCommand):
 	def remove_safe_dir(self, path):
 		if not SideBarSelection().isNone(path):
 			try:
-				os.rmdir(path)
+				shutil.rmtree(path)
 			except:
 				print("Unable to remove folder:\n\n"+path)
+				if sublime.platform() == 'windows':
+					try:
+						shutil.rmtree(path)
+					except:
+						# raise error in case we were unable to delete.
+						if os.path.exists(path):
+							shutil.rmtree(path)
+						else:
+							pass
 
 	def is_enabled(self, paths = []):
 		return SideBarSelection(paths).len() > 0 and SideBarSelection(paths).hasProjectDirectories() == False
